crates/vega-codegen/tests/compile_errors/negative_third_argument.rs
vega_codegen::algebra!(1, 0, -1);

fn main() {
    eprintln!("This is nothing");
}
